# GNCea

./: .gitignore  README.md
install/auv_description/share/ament_index/resource_index/parent_prefix_path/: auv_description
install/auv_description/share/auv_description/: package.xml
install/auv_description/share/auv_description/urdf/cube/: plugins.xacro
install/auv_description/share/auv_description/urdf/guppy/: guppytest1.urdf
log/: latest_build
src/auv_autonomy/: CMakeLists.txt  README.md  package.xml
src/auv_autonomy/launch/: autonomytest0.py  autonomytest1.py  autonomytest2.py
src/auv_autonomy/scripts/: control.py  gate_navigator_node.py  lane_navigator_cpp.cpp  test_hsv_tuning.py  utils.py  vision.py
src/auv_description/: CMakeLists.txt  package.xml
src/auv_description/launch/: controlsystemExperimental.launch.py  cube_thrust_test.launch.py  cube_thrust_test_water.launch.py  exauv_display.launch.py  guppy_display.launch.py  guppy_woolletpool.launch.py  testing.launch.py  view_lidar.launch.py
src/auv_description/scripts/: cmd_wasd_teleop.cpp  cmd_wasd_teleop.py  guppy_control_test.py
src/auv_description/src/: complex_hydrodynamics.cc  gazebo_ros_torpedo_shooter.cpp  simple_hydrodynamics.cc  wasd_body_thrust_plugin.cpp
src/auv_description/urdf/cube/: auv.urdf  plugins.xacro
src/auv_description/urdf/cubeexperimental/: auv.urdf
src/auv_description/urdf/guppy/: guppytest1.urdf
src/auv_description/urdf/guppyExperimental/: guppytest1Experimental.urdf
src/auv_description/urdf/torpedo/: torpedo1.sdf
src/auv_description/worlds/: nogravity_world.sdf  water_world.sdf  woolletPool_testworld.sdf  woolletPool_world.sdf
src/gncea_autonomy/: CMakeLists.txt  README.md  package.xml
src/gncea_autonomy/config/: hsv_params.yaml
src/gncea_autonomy/launch/: autonomytest2.py
src/gncea_autonomy/scripts/: lane_navigator_cpp.cpp
src/gncea_description/: CMakeLists.txt  package.xml
src/gncea_description/launch/: controlsystemExperimental.launch.py  cube_thrust_test.launch.py  cube_thrust_test_water.launch.py  cube_thrust_test_water_camera.launch.py  exauv_display.launch.py  guppy_display.launch.py  guppy_woolletpool.launch.py  launch.py  testing.launch.py  view_lidar.launch.py
src/gncea_description/scripts/: cmd_bridge.py  cmd_wasd_teleop.cpp  cmd_wasd_teleop.py  guppy_control_test.py
src/gncea_description/src/: cmd_bridge_cpp.cpp  gazebo_ros_torpedo_shooter.cpp  wasd_body_thrust_plugin.cpp
src/gncea_description/urdf/cube/: auv.urdf  complex_hydrodynamics.xacro  cube.urdf  plugins.xacro
src/gncea_description/urdf/cubeexperimental/: auv.urdf
src/gncea_description/urdf/exampleAUV/: exauv.urdf
src/gncea_description/urdf/guppyExperimental/: guppytest1.urdf.bak  guppytest1Experimental.urdf
src/gncea_description/worlds/: water_world.sdf  woolletPoolNoGravity_world.sdf  woolletPool_testworld.sdf
